opam-version: "2.0"
version: "0.6"
author: "simon.cruanes.2007@m4x.org"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Bindings to the SAT solver Minisat, with the solver included."
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
license: "BSD-2-clause"
depends: [
  "ocaml" {>= "4.03" }
  "dune" {>= "2.0"}
  "odoc" {with-doc}
  "containers" {>= "3.0" & with-test}
]
tags: [ "minisat" "solver" "SAT" ]
homepage: "https://github.com/c-cube/ocaml-minisat/"
dev-repo: "git+https://github.com/c-cube/ocaml-minisat.git"
bug-reports: "https://github.com/c-cube/ocaml-minisat/issues"
