
(library
  (name minisat)
  (public_name minisat)
  (flags :standard -safe-string)
  (c_library_flags :standard -lstdc++)
  (foreign_stubs
   (language cxx)
   ;(ocamlopt_flags :standard -O3 -bin-annot -unbox-closures -unbox-closures-factor 20)
   (include_dirs minisat-cpp/ minisat-cpp/mtl minisat-cpp/core)
   (flags :standard -fPIC -std=c++11)
   (names libminisat_stubs Solver)))
